add Json tests